--- a/styles.css
+++ b/styles.css
@@ -55,7 +55,7 @@ h2 {
     font-family: 'Montserrat', sans-serif;
 }
 
-button:hover {
+.grid-container > button:hover {
     background-color: #E0E0E0;
 }
 
@@ -73,15 +73,95 @@ span {
     color: #F49CC8;
 }
 
+.modal-bg {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    overflow: auto;
+    background-color: rgba(211, 211, 211, 0.8);
+}
+
+.modal-content {
+    background-color: #9CF4A7;
+    margin: 40% auto;
+    width: 45%;
+    height: 40%;
+    border-radius: 5px;
+    box-shadow: 2px 2px 10px #888888;
+    position: relative;
+}
+
+.modal-content > h1 {
+    position: absolute;
+    bottom: 50%;
+    left: 0;
+    right: 0;
+    margin: auto;
+    height: 20%;
+    color: white;
+    font-size: 36px;
+
+}
+
+#restart {
+    display: block;
+    width: 70%;
+    height: 50px;
+    font-size: 20px;
+    outline: none;
+    border: 3px solid white;
+    border-radius: 25px;
+    letter-spacing: 1px;
+    cursor: pointer;
+    background-color: #9CF4A7;
+    color: #808080;
+    font-weight: bold;
+    font-size: 24px;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    right: 0;
+    margin: auto;
+}
+
+#restart:hover {
+    animation-name: restart;
+    animation-duration: 1s;
+    animation-timing-function: ease-in;
+    animation-fill-mode: forwards;
+}
+
+@keyframes restart {
+    0% { }
+    50% { 
+        width: 85%;
+    }
+    100% {
+        width: 70%;
+    }
+}
+
+@keyframes restart-responsive {
+    0% {}
+    50% {
+        width: 80%;
+    }
+    100% {
+        width: 70%;
+    }
+}
+
+
 @keyframes text {
     0% { font-size: 0px;}
     100% { font-size: 80px;}
 }
 
 @media screen and (min-width: 400px) {
-    .player-info {
-        width: 80%;
-    }
 }
 
 @media screen and (min-width: 750px) {
@@ -101,11 +181,30 @@ span {
     .computer {
         left: 70%;
     }
+
+    .modal-content {
+        width: 35%;
+        height: 40%;
+        margin-top: 28%;
+    }
+
+    #restart:hover {
+        animation-name: restart-responsive;
+    }
 }
 
 @media screen and (min-width: 992px) {
     .player-info {
         width: 40%;
+    }
+
+    .modal-content {
+        width: 28%;
+        margin-top: 21%;
+    }
+
+    #restart:hover {
+        animation-name: restart-responsive;
     }
 }
 
@@ -117,4 +216,15 @@ span {
     .player-info {
         width: 35%;
     }
+
+    .modal-content {
+        width: 22%;
+        height: 40%;
+        margin-top: 17%;
+    }
+
+    #restart:hover {
+        animation-name: restart-responsive;
+    }
 }
+
